-- The name of the package.
Name:                grid-diagrams

-- The package version. See the Haskell package versioning policy
-- (http://www.haskell.org/haskellwiki/Package_versioning_policy) for
-- standards guiding when and how versions should be incremented.
Version:             0.1

-- A short (one-line) description of the package.
Synopsis:            A simple haskell library for converting (puzzle) grids to images

-- A longer description of the package.
-- Description:         

-- URL for the project homepage or repository.
Homepage:            http://github.com/twanvl/grid-diagrams

-- The license under which the package is released.
License:             BSD3

-- The file containing the license text.
License-file:        LICENSE

-- The package author(s).
Author:              Twan van Laarhoven

-- An email address to which users can send suggestions, bug reports,
-- and patches.
Maintainer:          twanvl@gmail.com

-- A copyright notice.
-- Copyright:           

Category:            Graphics

Build-type:          Simple

-- Extra files to be distributed with the package, such as examples or
-- a README.
-- Extra-source-files:  

-- Constraint on the version of Cabal needed to build this package.
Cabal-version:       >=1.2


Library
  -- Modules exported by the library.
  Exposed-modules: Graphics.GridDiagrams
  
  -- Packages needed in order to build this package.
  Build-depends: base < 5, mtl >= 2.0 && < 2.1, cairo >= 0.10.1 && < 0.13

